[package]
name = "wine-iso-run"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = "thin"

[dependencies]
serde = { version = "1.0.227", features = ["derive"] }
directories = "6.0.0"
toml = "0.9.7"
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
nanoid = "0.4.0"
